--- a/cloudbuild.yaml
+++ b/cloudbuild.yaml
@@ -8,6 +8,6 @@ steps:
 # Deploy container image to Cloud Run
 - name: 'gcr.io/google.com/cloudsdktool/cloud-sdk'
   entrypoint: gcloud
-  args: ['run', 'deploy', 'PROJECT_NAME', '--image', 'gcr.io/leafy-brace-405815/lstm', '--region', 'us-central1', '--platform', 'managed','--port','8080']
+  args: ['run', 'deploy', 'lstm', '--image', 'gcr.io/leafy-brace-405815/lstm', '--region', 'us-central1', '--platform', 'managed','--port','8080']
 images:
 - gcr.io/leafy-brace-405815/lstm
